2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* bonobo/bonobo-ui-init-gtk.c:
	* bonobo/bonobo-ui-preferences.c:
	* bonobo/bonobo-ui-util.c: HACK! compilation fixes manually
	including popt.h

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* bonobo/bonobo-ui-init-gtk.c: (bonobo_ui_gtk_module_info_get): Apply a
	patch from Christian Persch that makes libbonoboui use the correct
	struct member for parsing command line arguments using GOption.

2006-01-12  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "zh_HK" to ALL_LINGUAS.

2006-01-09  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-ui-init-gtk.c: (bonobo_ui_gtk_pre_args_parse),
	(bonobo_ui_gtk_post_args_parse),
	(bonobo_ui_gtk_module_get_goption_group),
	(bonobo_ui_gtk_module_info_get): Fix leaks introduced by the
	move to GOption. (Christian Perch) Closes bug #326237.
	* configure.in: Bump version.

2006-01-06  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "mk" to ALL_LINGUAS.

2005-09-29  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: Bump version to 2.13.0, and require libbonobo and
	bonobo-activation 2.13.0.
	* bonobo/bonobo-ui-init-gtk.c: (bonobo_ui_gtk_pre_args_parse),
	(bonobo_ui_gtk_post_args_parse), (bonobo_ui_gtk_module_info_get):
	Enable GOption argument parsing in gnome_program_init.
	Patch by Pawel Sliwowski <open.list@gmail.com>, bug #307312.

2005-09-10  Erdal Ronahi  <erdal.ronahi@gmail.com>

	* po/ku.po: Added Kurdish Translation

2005-08-31  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* bonobo/bonobo-selector-widget.c (get_lang_list): Use
	g_get_language_names instead of the deprecated
	gnome_i18n_get_language_list().

2005-08-19  Kjartan Maraas  <kmaraas@gnome.org>

	* Version 2.10.1: Fix up the release confusion I created.

2005-08-17  Michael Meeks  <michael.meeks@novell.com>

	* Version 2.10.0

2005-07-13  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	reviewed by: Michael Meeks <michael@ximian.com>

	* bonobo/bonobo-ui-sync-status.c: